--- a/CSS/Estilos.css
+++ b/CSS/Estilos.css
@@ -113,6 +113,7 @@ th, tr, td{
 
 tbody th:hover , td:hover{
     background-color: rgb(159, 158, 158);
+    transition: all 0.5s ease;
 }
 
 thead th{
